added explainatory comments to the codebase