@@ -7,14 +7,29 @@
         - ajouter les vm arguments suivants avant l'exécution :
         --module-path "D:\JavaFX11\javafx-sdk-11\lib" --add-modules javafx.controls,javafx.fxml
 
-        Note : Changer le chemin "D:\JavaFX11\javafx-sdk-11\lib" selon votre installation de JavaFX.
+        Note : -------------------------------------------------------------------------------
+         Changer le chemin "D:\JavaFX11\javafx-sdk-11\lib" selon votre installation de JavaFX.
+        --------------------------------------------------------------------------------------
 
 
 2 - Compilation et Execution :
+    Classes Principales :
+        - MainConsole : pour exécuter l'application en mode console.
+        - MainFX : pour exécuter l'application en mode graphique JavaFX.
+
     Compilation :
+        Powershell (Windows):
         javac -d bin --module-path "D:\JavaFX11\javafx-sdk-11\lib" --add-modules javafx.controls,javafx.fxml (Get-ChildItem -Path src -Recurse -Filter *.java).FullName
 
-        Note : Changer le chemin "D:\JavaFX11\javafx-sdk-11\lib" selon votre installation de JavaFX.
+        CMD (Windows):
+        javac -d bin --module-path "D:\JavaFX11\javafx-sdk-11\lib" --add-modules javafx.controls,javafx.fxml src\**\*.java
+
+        Linux / macOS (bash / zsh) :
+        javac -d bin --module-path /chemin/javafx/lib --add-modules javafx.controls,javafx.fxml $(find src -name "*.java")
+
+        Note : -------------------------------------------------------------------------------
+         Changer le chemin "D:\JavaFX11\javafx-sdk-11\lib" selon votre installation de JavaFX.
+        --------------------------------------------------------------------------------------
 
     Execution :
         Executer avec Console View :
@@ -33,6 +48,22 @@
             Avec Arguments (exemple avec un fichier "r.txt") :
                 java --module-path "D:\JavaFX11\javafx-sdk-11\lib" --add-modules javafx.controls -cp bin MainFX instances/r.txt 10
 
-        Note : Changer le chemin "D:\JavaFX11\javafx-sdk-11\lib" selon votre installation de JavaFX.
-        Note : les fichiers qui contient des instances predefinis des reseaux sont situés dans le dossier "instances"
-        Note : le deuxieme argument est optionnel (lambda) et vaut 10 par defaut si non fourni.
+        Note : --------------------------------------------------------------------------------------------------
+         - Changer le chemin "D:\JavaFX11\javafx-sdk-11\lib" selon votre installation de JavaFX.
+         - Les fichiers qui contient des instances predefinis des reseaux sont situés dans le dossier "instances"
+         - Le deuxieme argument est optionnel (lambda) et vaut 10 par defaut si non fourni.
+        ---------------------------------------------------------------------------------------------------------
+
+    Fonctionnalités implementées : (100%)
+        - Lecture et parsing des fichiers d'instances de réseaux.
+        — Implementation d'un algorithme stochastique inspiré de fameux algorithme genetique avec une adaptation pertinente a notre probleme.
+        - Implementation d'une interface graphique avec JavaFX pour visualiser les réseaux.
+        - Implementation des tests unitaires pour valider les composants critiques de l'application.
+        - Gestion des erreurs et des exceptions.
+        - Une Architecture MVC modulaire et extensible avec des classes bien définies pour chaque composant et separation des responsabilites.
+        - Respect des bonnes pratiques de programmation orientée objet.
+        - Utilisation correcte des paramètres de la ligne de commande avec documentation de la compilation et l'exécution.
+        - Une bonne qualité de l’interface textuelle et graphique.
+        - Documentation complète du code avec des commentaires clairs et concis.
+
+    Algorithme de resolution :
